PyMaker/datas/object2/RawHTML/i7101/Python_DOC_referPages.get-hints-of-reserved-words-in-a-working-idle-console.txt
<div class="post-text" itemprop="text">
<p>Help() function helps a lot to save brain's memories during coding.</p>
<pre><code>&gt;&gt;&gt; help(list)
Help on class list in module builtins:
class list(object)
 |  list() -&gt; new empty list
 |  list(iterable) -&gt; new list initialized from iterable's items
&gt;&gt;&gt; dir(zip)
['__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__lt__', '__ne__', '__new__', '__next__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__']
</code></pre>
<p>I can retrieve information about sequence, functions and classes.</p>
<p>However</p>
<pre><code> &gt;&gt;&gt; help(assert)
  File "&lt;stdin&gt;", line 1
    help(assert)
              ^
SyntaxError: invalid syntax
</code></pre>
<p>Can I get hints of reserve words like 'assert' within IDIE window ?</p>
</div>
<div class="post-text" itemprop="text">
<p>For <strong><a href="https://docs.python.org/3/reference/lexical_analysis.html#keywords" rel="nofollow noreferrer">keywords</a></strong>, you need to put them in quotes (otherwise <code>help(keyword)</code> would not be a syntactically correct statement). </p>
<pre><code>&gt;&gt;&gt; help('assert')

The "assert" statement
**********************

Assert statements are a convenient way to insert debugging assertions
into a program:
...
</code></pre>
<p>You can use the <a href="https://docs.python.org/2/library/keyword.html" rel="nofollow noreferrer"><code>keyword</code> module</a> to discover what exactly the Python grammar's keywords are. </p>
</div>
<div class="post-text" itemprop="text">
<p>Wrap statements/keywords in quotes to get info about them:</p>
<pre><code>&gt;&gt;&gt; help('assert')
</code></pre>
</div>
<span class="comment-copy">If you want a list of keywords, then you can check <code>keyword.kwlist</code> (<code>import keyword</code>).</span>
